--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 
 	// Swagger (API Documentation)
-	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
