--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,8 @@ dependencies {
 
 	implementation 'javax.activation:activation:1.1.1' // javax.activation 모듈 추가
 
+	implementation 'com.opencsv:opencsv:5.5.2' // csv, 파일 읽어오기
+
 }
 
 tasks.named('test') {
